# nautonomous_msgs

./: CMakeLists.txt  package.xml
nautonomous_authentication_msgs/: CMakeLists.txt  package.xml
nautonomous_authentication_msgs/srv/: Authentication.srv  Encryption.srv
nautonomous_logging_msgs/: CMakeLists.txt  package.xml
nautonomous_logging_msgs/msg/: LogGPS.msg  LogIMU.msg  LogPropulsionStatus.msg
nautonomous_map_msgs/: CMakeLists.txt  package.xml
nautonomous_map_msgs/srv/: Crop.srv  CropMapPoints.srv  Load.srv  MapLoader.srv
nautonomous_mission_msgs/: CMakeLists.txt  README.md  package.xml
nautonomous_mission_msgs/action/: MissionPlan.action
nautonomous_mission_msgs/msg/: Mission.msg  OperationAction.msg  OperationPlan.msg
nautonomous_msgs/: CMakeLists.txt  package.xml
nautonomous_pose_msgs/: CMakeLists.txt  package.xml
nautonomous_routing_msgs/: CMakeLists.txt  package.xml
nautonomous_routing_msgs/srv/: Route.srv
nautonomous_webserver_msgs/: CMakeLists.txt  package.xml
nautonomous_webserver_msgs/msg/: NautonomousAuthentication.msg
