<?xml version="1.0"?>
<package>

  <name>nautonomous_mission_msgs</name>
  <version>0.0.1</version>
  <description>The nautonomous_mission_msgs package</description>

  <maintainer email="daan.zeeuwe01@waternet.nl">Daan Zeeuwe</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <architecture_independent/>
  </export>

</package>
