<package>
  <name>nautonomous_msgs</name>
  <version>0.0.1</version>
  <description>The nautonomous_msgs package</description>
  <maintainer email="daan.zeeuwe01@waternet.nl">Daan Zeeuwe</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>nautonomous_logging_msgs</run_depend>
  <run_depend>nautonomous_map_msgs</run_depend>
  <run_depend>nautonomous_mission_msgs</run_depend>
  <run_depend>nautonomous_pose_msgs</run_depend>
  <run_depend>nautonomous_webserver_msgs</run_depend>
  <run_depend>nautonomous_routing_msgs</run_depend>


  <export>
    <metapackage/>
  </export>
</package>
