<?xml version="1.0"?>
<package>

  <name>nautonomous_webserver_msgs</name>
  <version>0.0.0</version>
  <description>The nautonomous_webserver_msgs package</description>

  <maintainer email="killian.tessel@waternet.nl">Kilian Tessel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>

</package>
